#master overflow fix

--- a/examples/style.css
+++ b/examples/style.css
@@ -3,7 +3,7 @@
     display: block;
     width: 500px;
     height: 200px;
-    /* overflow: hidden;  */
+ overflow: hidden; 
 }
 
 .content{
